[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-trace"
version = "0.1.0"
description = "Polymarket Account Forensics Tool - Track funding sources and identify coordinated accounts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PM Trace Contributors"}
]
keywords = ["polymarket", "blockchain", "forensics", "polygon", "cryptocurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "polygonscan-python>=1.0.2",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
pm-trace = "pm_trace.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/pm-informed-flow"
Repository = "https://github.com/your-username/pm-informed-flow"

[tool.setuptools.packages.find]
include = ["pm_trace*"]

